# noteboks

./: .gitignore  Cargo.toml  README.md  TODO.md  extension.toml  zed.code-workspace
languages/noteboks/: config.toml  highlights.scm  injections.scm  outline.scm  overrides.scm
languages/noteboks-inline/: config.toml  highlights.scm  injections.scm
lsp/noteboks-lsp/: .gitignore  Cargo.toml
lsp/noteboks-lsp/src/: index.rs  main.rs
src/: lib.rs
