[package]
name = "noteboks-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20.0"
lsp-textdocument = "0.4.2"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
serde = "1.0.228"
tree-sitter = "0.25.10"
tree-sitter-org = { git = "https://github.com/zac-garby/tree-sitter-org.git" }
lsp-types = "0.97.0"
walkdir = "2.5.0"

[build-dependencies]
cc="*"
